--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,11 @@
 machine:
   node:
     version: 5.10.1
+  post:
+    - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+    - sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+    - sudo apt-get update
+    - sudo apt-get install google-chrome-stable
 dependencies:
   pre:
     - npm install -g npm@3.8.3
